次の曲に移動する機能？

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -54,7 +54,7 @@ body {
 
 .content_area {
     display: grid;
-    grid-template-columns: 200px 1fr;
+    grid-template-columns: 30% 1fr;
 }
 
 .mylistlist {
