F12 F5 が使えるように。 動画IDを正規表現で見つけるようになったのでURL直接貼れます。

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -44,7 +44,7 @@ body {
 
 .player_area {
     display: grid;
-    grid-template-columns: 100px 1fr 60px 60px;
+    grid-template-columns: 100px 1fr 60px 60px 60px;
 }
 
 .single {
@@ -81,5 +81,5 @@ body {
 .videolist {
     overflow-y: scroll;
     overflow-x: hidden;
-    height: 100%;
+    height: auto;
 }
